--- a/app/reports/jasper/anathesh_eng/main.jrxml
+++ b/app/reports/jasper/anathesh_eng/main.jrxml
@@ -12,6 +12,7 @@
 	<parameter name="user" class="java.lang.String"/>
 	<queryString language="SQL">
 		<![CDATA[select 
+ow.position,
 		cs.brand_name,
 		ord.comments,
 		ord.gross_weight,
@@ -37,7 +38,7 @@
 		from order_schedules os
 		join orders ord on (ord.id = os.order_id)
 		join customers_suppliers cs on (cs.id=ord.customer_id)
-		left join order_waypoints ow on (os.id=ow.order_schedule_id and ow.offer_schedule_between_waypoint_id is null)
+		left join order_waypoints ow on (os.id=ow.order_schedule_id  )
 		left join factories fact_sched on (fact_sched.id=os.factory_id)
 		left join factories fact_wayp on (fact_wayp.id=ow.factory_id)
 		where os.order_id in 
@@ -53,9 +54,16 @@
 		)
 		
 		)
-		
-		order by os.order_id,os.position]]>
+		  and ow.position= (select max(ow2.position) from  order_waypoints ow2 where ow2.order_id=os.order_id )
+        group by order_id
+		order by os.position asc,ow.position desc]]>
 	</queryString>
+	<field name="position" class="java.lang.Integer">
+		<property name="com.jaspersoft.studio.field.name" value="position"/>
+		<property name="com.jaspersoft.studio.field.label" value="position"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="order_waypoints"/>
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
 	<field name="brand_name" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="brand_name"/>
 		<property name="com.jaspersoft.studio.field.label" value="brand_name"/>
@@ -86,11 +94,10 @@
 		<property name="com.jaspersoft.studio.field.tree.path" value="orders"/>
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="position" class="java.lang.Integer">
+	<field name="COLUMN_7" class="java.lang.Integer">
 		<property name="com.jaspersoft.studio.field.name" value="position"/>
 		<property name="com.jaspersoft.studio.field.label" value="position"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="order_schedules"/>
-		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="order_id" class="java.lang.Long">
 		<property name="com.jaspersoft.studio.field.name" value="order_id"/>
@@ -219,17 +226,17 @@
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="178" splitType="Stretch">
+		<band height="160" splitType="Stretch">
 			<frame>
-				<reportElement stretchType="ElementGroupHeight" x="10" y="94" width="534" height="84" uuid="d5825544-6c3d-454c-98b4-074cb3316ac3"/>
+				<reportElement stretchType="ElementGroupHeight" x="10" y="0" width="534" height="160" uuid="d0c937a1-a2d5-406f-aaa7-8c31f9bbea8c"/>
 				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="12" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="dcbe1c6b-1311-4c2c-a073-0c166eeffa61">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="31" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="7812fa4c-4d81-4f1c-a5f1-211252d077da">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -238,7 +245,7 @@
 					<textFieldExpression><![CDATA["Brand name: "+($F{fact_sched_id}!=null?$F{fact_sched_brand_name}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="56" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="bb4f9449-0483-4479-b684-03d58cad4476">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="60" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="8e3f6ed3-bd86-48dc-9031-0e89c1850558">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -248,7 +255,7 @@
 ($F{fact_sched_appointment_day_load}!=null?new SimpleDateFormat("dd/MM/yyyy").format($F{fact_sched_appointment_day_load}):"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="70" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="3938eb4b-59ca-429b-a32f-c956621717c5">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="74" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="632a4bd3-0d90-4773-8df1-1d220c6b4f25">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -260,47 +267,47 @@
 )]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="12" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="346985da-4e9b-4bdc-a606-55093a5608a3">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="31" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="10288d10-be2e-4175-b4d1-a781a412f986">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Brand name: "+($F{fact_wayp_id}!=null?$F{fact_wayp_brand_name}:"-")]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Brand Name: "+($F{fact_wayp_id}!=null?$F{fact_wayp_brand_name}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="56" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="faf21115-3c03-468d-a80f-97bb6b3289de">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="59" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="d309fad7-8bd9-49e3-a33a-dbc0e93257b7">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Unloading Date: "+
+					<textFieldExpression><![CDATA["Unloading Place: "+
 ($F{fact_wayp_appointment_day_load}!=null?new SimpleDateFormat("dd/MM/yyyy").format($F{fact_wayp_appointment_day_load}):"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="70" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="48d291c1-852e-4b23-b55e-7d322ed12dcf">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="73" width="254" height="16" isPrintWhenDetailOverflows="true" uuid="fe91fcce-ae8e-4be0-bf37-e4419ae47f49">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Unloading Date: "+
+					<textFieldExpression><![CDATA["Unloading Ref: "+
 (
 	($F{ow_truck_loading_code}!=null && $F{ow_truck_loading_code}!="null")?$F{ow_truck_loading_code}:"-"
 )]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ContainerBottom" x="0" y="41" width="270" height="15" uuid="c213ece2-32f9-4f04-9c16-b0a44ccff6e3">
+					<reportElement stretchType="ContainerBottom" x="0" y="45" width="270" height="15" uuid="dd11d994-b5ee-4b5e-8367-15509dabf0da">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Coordinates: "+($F{fact_sched_coordinates}!=null?$F{fact_sched_coordinates}:"-")]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Coordinates "+($F{fact_sched_coordinates}!=null?$F{fact_sched_coordinates}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="41" width="254" height="15" isPrintWhenDetailOverflows="true" uuid="e3df75a8-3a6a-42a0-b6a8-eec1a334336f">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="45" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="01814d05-2822-47d2-b424-f1125e627c01">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -309,7 +316,7 @@
 					<textFieldExpression><![CDATA["Coordinates: "+$F{fact_wayp_coordinates}]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="ScaleFont">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="26" width="270" height="15" isPrintWhenDetailOverflows="true" uuid="2c24fbfb-fe7d-4e19-be18-8fdf62ee5044">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="16" width="270" height="15" isPrintWhenDetailOverflows="true" uuid="a3db0ca4-e898-4585-b4f6-331f0288c254">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -318,71 +325,67 @@
 					<textFieldExpression><![CDATA["Loading Place: "+($F{fact_sched_id}!=null?$F{fact_sched_address}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="ScaleFont">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="26" width="254" height="15" isPrintWhenDetailOverflows="true" uuid="0c7553fd-524a-4a17-870c-c1abf4351f6f">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="17" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="fde27933-1ab4-4a05-b352-14c5fd999945">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Loading Ref: "+($F{fact_wayp_id}!=null?$F{fact_wayp_address}:"-")]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Unloading Place: "+($F{fact_wayp_id}!=null?$F{fact_wayp_address}:"-")]]></textFieldExpression>
 				</textField>
-			</frame>
-			<frame>
-				<reportElement isPrintRepeatedValues="false" x="10" y="10" width="534" height="84" isRemoveLineWhenBlank="true" uuid="76c79b88-11be-4e0f-b73c-cb8533ccfef6"/>
-				<box>
-					<pen lineStyle="Dotted"/>
-					<topPen lineWidth="1.0" lineStyle="Solid"/>
-					<bottomPen lineWidth="1.0" lineStyle="Dashed"/>
-				</box>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="5" width="270" height="14" isRemoveLineWhenBlank="true" uuid="aa53826d-0821-42ef-b018-1185423af4d9">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="ScaleFont">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="116" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="ed476179-b11b-43b6-9488-2e1be7f6ff29">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Order: "+ "#"+ $F{order_id}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Customer Name: "+
+(
+	($F{brand_name}!=null && $F{brand_name}!="null")?$F{brand_name}:"-"
+)]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="33" width="270" height="14" isRemoveLineWhenBlank="true" uuid="7b2942fe-773a-4fe1-bc13-7e663f02dfd3">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="StretchHeight">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="130" width="270" height="24" isPrintWhenDetailOverflows="true" uuid="c9d40d35-e6c1-48fe-99fe-2a4c2f5f5422">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Weight: "+$F{gross_weight}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Comments: "+
+(
+	($F{comments}!=null && $F{comments}!="null")?$F{comments}:"-"
+)]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="47" width="270" height="14" isRemoveLineWhenBlank="true" uuid="a74f5409-04e0-4a36-a4bd-87749367456e">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="StretchHeight">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="88" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="081bb4ef-a928-41c3-b57c-951a458e7d5c">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Temprature: "+$F{truck_temprature}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Temprature: "+ 
+(
+	($F{truck_temprature}!=null && $F{truck_temprature}!="null")?$F{truck_temprature}:"-"
+)]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="19" width="270" height="14" isRemoveLineWhenBlank="true" uuid="2939ffca-d13a-483b-aa94-1ee89ea8c2f5">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="StretchHeight">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="102" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="7c02ab76-ffdb-4c9d-a86c-14aaf104e504">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["customer : "+$F{brand_name}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Weight: "+ $F{gross_weight}]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="61" width="534" height="22" isRemoveLineWhenBlank="true" uuid="9267f5f3-4edc-4df8-ab0c-5a765b087aac">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="ScaleFont">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="1" width="270" height="15" isPrintWhenDetailOverflows="true" uuid="10234e47-bac5-4c7f-85c0-5a76502bbb7d">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Comments: "+($F{comments}!=null && $F{comments}!="-"?$F{comments}:"-")]]></textFieldExpression>
+					<textFieldExpression><![CDATA["#"+$F{order_id}]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
