--- a/app/reports/jasper/anathesh_nova/main.jrxml
+++ b/app/reports/jasper/anathesh_nova/main.jrxml
@@ -12,6 +12,7 @@
 	<parameter name="user" class="java.lang.String"/>
 	<queryString language="SQL">
 		<![CDATA[select 
+ow.position,
 		cs.brand_name,
 		ord.comments,
 		ord.gross_weight,
@@ -37,7 +38,7 @@
 		from order_schedules os
 		join orders ord on (ord.id = os.order_id)
 		join customers_suppliers cs on (cs.id=ord.customer_id)
-		left join order_waypoints ow on (os.id=ow.order_schedule_id and ow.offer_schedule_between_waypoint_id is null)
+		left join order_waypoints ow on (os.id=ow.order_schedule_id  )
 		left join factories fact_sched on (fact_sched.id=os.factory_id)
 		left join factories fact_wayp on (fact_wayp.id=ow.factory_id)
 		where os.order_id in 
@@ -53,8 +54,9 @@
 		)
 		
 		)
-		
-		order by os.order_id,os.position]]>
+		  and ow.position= (select max(ow2.position) from  order_waypoints ow2 where ow2.order_id=os.order_id )
+        group by order_id
+		order by os.position asc,ow.position desc]]>
 	</queryString>
 	<field name="brand_name" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="brand_name"/>
@@ -180,17 +182,17 @@
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="178" splitType="Stretch">
+		<band height="160" splitType="Stretch">
 			<frame>
-				<reportElement stretchType="ElementGroupHeight" x="10" y="94" width="534" height="84" uuid="d5825544-6c3d-454c-98b4-074cb3316ac3"/>
+				<reportElement stretchType="ElementGroupHeight" x="10" y="0" width="534" height="160" uuid="67462bc7-e000-462a-820c-6411256484a1"/>
 				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="12" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="dcbe1c6b-1311-4c2c-a073-0c166eeffa61">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="31" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="de9a3733-f02b-4d4b-a1ed-1a7e2ae9b19f">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -199,7 +201,7 @@
 					<textFieldExpression><![CDATA["Επωνυμία: "+($F{fact_sched_id}!=null?$F{fact_sched_brand_name}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="56" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="bb4f9449-0483-4479-b684-03d58cad4476">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="60" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="dc6ca164-9195-4fbf-b2db-b9e8b08752d1">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -209,7 +211,7 @@
 ($F{fact_sched_appointment_day_load}!=null?new SimpleDateFormat("dd/MM/yyyy").format($F{fact_sched_appointment_day_load}):"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="70" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="3938eb4b-59ca-429b-a32f-c956621717c5">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="74" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="bcb86df9-ec25-4f1c-9f10-b6bc74fe62a7">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -221,7 +223,7 @@
 )]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="12" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="346985da-4e9b-4bdc-a606-55093a5608a3">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="31" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="77ea25f2-9bed-44fe-88bb-b9290990d079">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -230,29 +232,29 @@
 					<textFieldExpression><![CDATA["Επωνυμία: "+($F{fact_wayp_id}!=null?$F{fact_wayp_brand_name}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="56" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="faf21115-3c03-468d-a80f-97bb6b3289de">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="59" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="3055e2c7-261d-4c94-a939-d5a826ad9ffa">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Ημερομηνία Φόρτωσης: "+
+					<textFieldExpression><![CDATA["Ημερομηνία εκφόρτωσης: "+
 ($F{fact_wayp_appointment_day_load}!=null?new SimpleDateFormat("dd/MM/yyyy").format($F{fact_wayp_appointment_day_load}):"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="70" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="48d291c1-852e-4b23-b55e-7d322ed12dcf">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="73" width="254" height="16" isPrintWhenDetailOverflows="true" uuid="0e1d566e-f164-4498-abbf-298b26f71940">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Κωδικός Φόρτωσης: "+
+					<textFieldExpression><![CDATA["Κωδικός εκφόρτωσης: "+
 (
 	($F{ow_truck_loading_code}!=null && $F{ow_truck_loading_code}!="null")?$F{ow_truck_loading_code}:"-"
 )]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ContainerBottom" x="0" y="41" width="270" height="15" uuid="c213ece2-32f9-4f04-9c16-b0a44ccff6e3">
+					<reportElement stretchType="ContainerBottom" x="0" y="45" width="270" height="15" uuid="0f1c0c7c-c134-45ba-90fb-6ee136f50cd9">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -261,7 +263,7 @@
 					<textFieldExpression><![CDATA["Συντ/μένες: "+($F{fact_sched_coordinates}!=null?$F{fact_sched_coordinates}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="41" width="254" height="15" isPrintWhenDetailOverflows="true" uuid="e3df75a8-3a6a-42a0-b6a8-eec1a334336f">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="45" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="296f0d53-cfd1-42c1-baab-dabd3fd6a509">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -270,7 +272,7 @@
 					<textFieldExpression><![CDATA["Συντ/μένες:: "+$F{fact_wayp_coordinates}]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="ScaleFont">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="26" width="270" height="15" isPrintWhenDetailOverflows="true" uuid="2c24fbfb-fe7d-4e19-be18-8fdf62ee5044">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="16" width="270" height="15" isPrintWhenDetailOverflows="true" uuid="006f7d07-1a47-46c7-a854-58f0a61f4658">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -279,7 +281,7 @@
 					<textFieldExpression><![CDATA["Διεύθυνση Φόρτωσης: "+($F{fact_sched_id}!=null?$F{fact_sched_address}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="ScaleFont">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="26" width="254" height="15" isPrintWhenDetailOverflows="true" uuid="0c7553fd-524a-4a17-870c-c1abf4351f6f">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="17" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="8d049620-833d-404c-8add-deedb3e80417">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -287,63 +289,59 @@
 					</textElement>
 					<textFieldExpression><![CDATA["Διεύθυνση Εκφόρτωσης: "+($F{fact_wayp_id}!=null?$F{fact_wayp_address}:"-")]]></textFieldExpression>
 				</textField>
-			</frame>
-			<frame>
-				<reportElement isPrintRepeatedValues="false" x="10" y="10" width="534" height="84" isRemoveLineWhenBlank="true" uuid="76c79b88-11be-4e0f-b73c-cb8533ccfef6"/>
-				<box>
-					<pen lineStyle="Dotted"/>
-					<topPen lineWidth="1.0" lineStyle="Solid"/>
-					<bottomPen lineWidth="1.0" lineStyle="Dashed"/>
-				</box>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="5" width="270" height="14" isRemoveLineWhenBlank="true" uuid="aa53826d-0821-42ef-b018-1185423af4d9">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="ScaleFont">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="116" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="a349c506-c1e9-46c5-b542-9380bb86aee9">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Παραγγελία: "+ "#"+ $F{order_id}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Όνομα Πελάτη: "+
+(
+	($F{brand_name}!=null && $F{brand_name}!="null")?$F{brand_name}:"-"
+)]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="33" width="270" height="14" isRemoveLineWhenBlank="true" uuid="7b2942fe-773a-4fe1-bc13-7e663f02dfd3">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="StretchHeight">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="130" width="270" height="24" isPrintWhenDetailOverflows="true" uuid="bc6cc280-c781-49f2-a9e1-ce115d292eb0">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Βάρος: "+$F{gross_weight}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Σχόλια: "+
+(
+	($F{comments}!=null && $F{comments}!="null")?$F{comments}:"-"
+)]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="47" width="270" height="14" isRemoveLineWhenBlank="true" uuid="a74f5409-04e0-4a36-a4bd-87749367456e">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="StretchHeight">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="88" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="0fec03bd-56da-43a5-8e7d-9fcadcf0d4d8">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Θερμοκρασία: "+$F{truck_temprature}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Θερμοκρασία: "+ 
+(
+	($F{truck_temprature}!=null && $F{truck_temprature}!="null")?$F{truck_temprature}:"-"
+)]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="19" width="270" height="14" isRemoveLineWhenBlank="true" uuid="2939ffca-d13a-483b-aa94-1ee89ea8c2f5">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="StretchHeight">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="102" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="f3f4344f-d3b3-4120-9df7-15c732174784">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Πελάτης: "+$F{brand_name}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Βάρος: "+ $F{gross_weight}]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="61" width="534" height="22" isRemoveLineWhenBlank="true" uuid="9267f5f3-4edc-4df8-ab0c-5a765b087aac">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="ScaleFont">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="1" width="270" height="15" isPrintWhenDetailOverflows="true" uuid="29ecfe34-7618-405d-9097-383fc2c5a01b">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Σχόλια: "+($F{comments}!=null && $F{comments}!="-"?$F{comments}:"-")]]></textFieldExpression>
+					<textFieldExpression><![CDATA["#"+$F{order_id}]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
