--- a/app/reports/jasper/anathesh_nova_eng/main.jrxml
+++ b/app/reports/jasper/anathesh_nova_eng/main.jrxml
@@ -180,17 +180,17 @@
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="178" splitType="Stretch">
+		<band height="160" splitType="Stretch">
 			<frame>
-				<reportElement stretchType="ElementGroupHeight" x="10" y="94" width="534" height="84" uuid="d5825544-6c3d-454c-98b4-074cb3316ac3"/>
+				<reportElement stretchType="ElementGroupHeight" x="10" y="0" width="534" height="160" uuid="c4918639-7389-47a8-9c46-f02c39de3771"/>
 				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="12" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="dcbe1c6b-1311-4c2c-a073-0c166eeffa61">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="31" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="744b55f3-f361-4c43-b4e6-c4fe10770f6c">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -199,7 +199,7 @@
 					<textFieldExpression><![CDATA["Brand name: "+($F{fact_sched_id}!=null?$F{fact_sched_brand_name}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="56" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="bb4f9449-0483-4479-b684-03d58cad4476">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="60" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="323925c6-87ff-43a5-b548-d9a1b2b79acd">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -209,7 +209,7 @@
 ($F{fact_sched_appointment_day_load}!=null?new SimpleDateFormat("dd/MM/yyyy").format($F{fact_sched_appointment_day_load}):"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="70" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="3938eb4b-59ca-429b-a32f-c956621717c5">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="74" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="626f927e-f90b-4777-9af2-15afee0f7edd">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -221,47 +221,47 @@
 )]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="12" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="346985da-4e9b-4bdc-a606-55093a5608a3">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="31" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="cb9c159a-9b22-401c-9b4c-9b17314eb7d6">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Brand name: "+($F{fact_wayp_id}!=null?$F{fact_wayp_brand_name}:"-")]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Brand Name: "+($F{fact_wayp_id}!=null?$F{fact_wayp_brand_name}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="56" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="faf21115-3c03-468d-a80f-97bb6b3289de">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="59" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="8bb768e9-620f-4db2-9e06-2e6adb9380b4">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Unloading Date: "+
+					<textFieldExpression><![CDATA["Unloading Place: "+
 ($F{fact_wayp_appointment_day_load}!=null?new SimpleDateFormat("dd/MM/yyyy").format($F{fact_wayp_appointment_day_load}):"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="70" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="48d291c1-852e-4b23-b55e-7d322ed12dcf">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="73" width="254" height="16" isPrintWhenDetailOverflows="true" uuid="9eafca55-bab7-4743-8f2e-683b8eaf4d89">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Unloading Date: "+
+					<textFieldExpression><![CDATA["Unloading Ref: "+
 (
 	($F{ow_truck_loading_code}!=null && $F{ow_truck_loading_code}!="null")?$F{ow_truck_loading_code}:"-"
 )]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ContainerBottom" x="0" y="41" width="270" height="15" uuid="c213ece2-32f9-4f04-9c16-b0a44ccff6e3">
+					<reportElement stretchType="ContainerBottom" x="0" y="45" width="270" height="15" uuid="4b6865d6-7a36-4ee8-9ca3-920572d28981">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Coordinates: "+($F{fact_sched_coordinates}!=null?$F{fact_sched_coordinates}:"-")]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Coordinates "+($F{fact_sched_coordinates}!=null?$F{fact_sched_coordinates}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="StretchHeight">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="41" width="254" height="15" isPrintWhenDetailOverflows="true" uuid="e3df75a8-3a6a-42a0-b6a8-eec1a334336f">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="45" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="956f23b3-1ef8-4d67-91d8-a46fc272b580">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -270,7 +270,7 @@
 					<textFieldExpression><![CDATA["Coordinates: "+$F{fact_wayp_coordinates}]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="ScaleFont">
-					<reportElement stretchType="ElementGroupHeight" x="0" y="26" width="270" height="15" isPrintWhenDetailOverflows="true" uuid="2c24fbfb-fe7d-4e19-be18-8fdf62ee5044">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="16" width="270" height="15" isPrintWhenDetailOverflows="true" uuid="a209e9b8-a04d-47c0-91c4-c4ca0bc9d6d4">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
@@ -279,71 +279,67 @@
 					<textFieldExpression><![CDATA["Loading Place: "+($F{fact_sched_id}!=null?$F{fact_sched_address}:"-")]]></textFieldExpression>
 				</textField>
 				<textField textAdjust="ScaleFont">
-					<reportElement stretchType="ElementGroupHeight" x="280" y="26" width="254" height="15" isPrintWhenDetailOverflows="true" uuid="0c7553fd-524a-4a17-870c-c1abf4351f6f">
+					<reportElement stretchType="ElementGroupHeight" x="280" y="17" width="254" height="14" isPrintWhenDetailOverflows="true" uuid="6ae8903d-7db3-4dcb-823a-536b15264f94">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Loading Ref: "+($F{fact_wayp_id}!=null?$F{fact_wayp_address}:"-")]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Unloading Place: "+($F{fact_wayp_id}!=null?$F{fact_wayp_address}:"-")]]></textFieldExpression>
 				</textField>
-			</frame>
-			<frame>
-				<reportElement isPrintRepeatedValues="false" x="10" y="10" width="534" height="84" isRemoveLineWhenBlank="true" uuid="76c79b88-11be-4e0f-b73c-cb8533ccfef6"/>
-				<box>
-					<pen lineStyle="Dotted"/>
-					<topPen lineWidth="1.0" lineStyle="Solid"/>
-					<bottomPen lineWidth="1.0" lineStyle="Dashed"/>
-				</box>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="5" width="270" height="14" isRemoveLineWhenBlank="true" uuid="aa53826d-0821-42ef-b018-1185423af4d9">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="ScaleFont">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="116" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="9210cae6-ee39-41cf-be50-c676f02c5b7f">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Order: "+ "#"+ $F{order_id}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Customer Name: "+
+(
+	($F{brand_name}!=null && $F{brand_name}!="null")?$F{brand_name}:"-"
+)]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="33" width="270" height="14" isRemoveLineWhenBlank="true" uuid="7b2942fe-773a-4fe1-bc13-7e663f02dfd3">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="StretchHeight">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="130" width="270" height="24" isPrintWhenDetailOverflows="true" uuid="5e1164d2-3865-4d51-b9f3-4c946cc22200">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Weight: "+$F{gross_weight}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Comments: "+
+(
+	($F{comments}!=null && $F{comments}!="null")?$F{comments}:"-"
+)]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="47" width="270" height="14" isRemoveLineWhenBlank="true" uuid="a74f5409-04e0-4a36-a4bd-87749367456e">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="StretchHeight">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="88" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="5fbea02f-b674-489b-885a-15ea97f5c59e">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Temprature: "+$F{truck_temprature}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Temprature: "+ 
+(
+	($F{truck_temprature}!=null && $F{truck_temprature}!="null")?$F{truck_temprature}:"-"
+)]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="19" width="270" height="14" isRemoveLineWhenBlank="true" uuid="2939ffca-d13a-483b-aa94-1ee89ea8c2f5">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="StretchHeight">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="102" width="270" height="14" isPrintWhenDetailOverflows="true" uuid="8eb1fdc7-bbe8-4e4d-8ea1-42d07b189851">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["customer : "+$F{brand_name}]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Weight: "+ $F{gross_weight}]]></textFieldExpression>
 				</textField>
-				<textField>
-					<reportElement isPrintRepeatedValues="false" x="0" y="61" width="534" height="22" isRemoveLineWhenBlank="true" uuid="9267f5f3-4edc-4df8-ab0c-5a765b087aac">
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				<textField textAdjust="ScaleFont">
+					<reportElement stretchType="ElementGroupHeight" x="0" y="1" width="270" height="15" isPrintWhenDetailOverflows="true" uuid="5ba4b5ac-2dd2-4a47-87dd-c81b607fc5f6">
 						<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					</reportElement>
 					<textElement>
 						<font fontName="ArialPdf"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Comments: "+($F{comments}!=null && $F{comments}!="-"?$F{comments}:"-")]]></textFieldExpression>
+					<textFieldExpression><![CDATA["#"+$F{order_id}]]></textFieldExpression>
 				</textField>
 			</frame>
 		</band>
